--- a/main/res/layout/cacheslist_item.xml
+++ b/main/res/layout/cacheslist_item.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/one_cache"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="?background_color"
-    tools:context=".ui.CacheListAdapter" >
+    tools:context=".ui.CacheListAdapter">
 
     <!-- selection mode checkbox -->
-
     <CheckBox
         android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
         android:layout_gravity="left"
         android:gravity="left|center_horizontal"
         android:paddingRight="5dip"
@@ -23,28 +20,36 @@
         tools:visibility="visible"/>
 
     <!-- "found" marker, vertical green/red line -->
-
     <ImageView
         android:id="@+id/log_status_mark"
         android:layout_width="2dip"
-        android:layout_height="30dip"
-        android:layout_centerVertical="true"
+        android:layout_height="match_parent"
         android:layout_marginRight="4dip"
-        android:layout_toRightOf="@id/checkbox"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
+        android:gravity="left|center_vertical"
         android:src="@drawable/mark_transparent"
         android:visibility="visible"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/text_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/log_status_mark"
-        android:layout_marginRight="110dip"
-        android:orientation="vertical">
+        android:paddingTop="5dip"
+        android:layout_marginRight="4dip"
+        android:scaleType="fitXY"
+        android:gravity="left|top"
+        android:visibility="visible"
+        tools:visibility="visible" />
 
-        <!-- cache name and icon -->
+    <!-- cache icon -->
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="2">
 
+        <!-- cache name -->
         <TextView
             android:id="@+id/text"
             android:layout_width="fill_parent"
@@ -59,7 +64,6 @@
             tools:text="name" />
 
         <!-- cache attributes and other info -->
-
         <TextView
             android:id="@+id/info"
             android:layout_width="fill_parent"
@@ -73,19 +77,16 @@
             android:textIsSelectable="false"
             android:textSize="12sp"
             tools:text="terrain, difficulty and others" />
-
     </LinearLayout>
 
     <!-- real text based direction and distance -->
-
     <RelativeLayout
         android:layout_width="78dip"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:layout_marginBottom="1dip"
-        android:layout_marginRight="30dip"
-        android:layout_marginTop="1dip" >
+        android:layout_marginRight="1dip"
+        android:layout_marginTop="1dip"
+        android:layout_gravity="right">
 
         <view
             android:id="@+id/distance"
@@ -133,14 +134,12 @@
     </RelativeLayout>
 
     <!-- inventory and favorites -->
-
     <RelativeLayout
         android:layout_width="35dip"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:layout_marginBottom="1dip"
-        android:layout_marginTop="1dip" >
+        android:layout_marginTop="1dip"
+        android:layout_gravity="right">
 
         <TextView
             android:id="@+id/inventory"
@@ -149,7 +148,7 @@
             android:layout_alignParentTop="true"
             android:layout_gravity="center_vertical|center_horizontal"
             android:background="?inventory"
-            android:drawableLeft="@drawable/trackable_all"
+            app:drawableLeftCompat="@drawable/trackable_all"
             android:drawablePadding="-10sp"
             android:gravity="center"
             android:scaleType="center"
@@ -164,25 +163,23 @@
         <TextView
             android:id="@+id/favorite"
             android:layout_width="35dip"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:layout_height="22dp"
             android:layout_gravity="center"
             android:layout_marginTop="22dip"
             android:background="?favorite"
             android:ellipsize="end"
             android:gravity="center"
             android:lines="1"
-            android:paddingBottom="1dip"
+            android:maxLines="1"
             android:paddingLeft="3dip"
             android:paddingRight="3dip"
+            android:paddingBottom="1dip"
             android:scrollHorizontally="true"
             android:textColor="?text_color"
             android:textIsSelectable="false"
             android:textSize="12sp"
             android:textStyle="bold"
-            tools:text="345"
-            android:maxLines="1" />
+            tools:text="345" />
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
