support new gc attributes
fixes  #8927

Implement integration for the new attributes:
- Bonus cache
- Power trail
- Challenge cache
- GC Solution checker available

--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -102,6 +102,10 @@
     &#160;&#160;&#160;· USB by Kenneth Von Alt from The Noun Project\n
     &#160;&#160;&#160;· new-idea by Artem Korotkikh from The Noun Project\n
     &#160;&#160;&#160;· Arrow by Jamison Wieser from The Noun Project\n
+    &#160;&#160;&#160;· add by Susannanova from the Noun Project\n
+    &#160;&#160;&#160;· Trail by Martina Krasnayová from the Noun Project\n
+    &#160;&#160;&#160;· challenge by Adrien Coquet from the Noun Project\n
+    &#160;&#160;&#160;· solution by Adrien Coquet from the Noun Project\n
     · <a href="https://commons.apache.org/">The Apache Commons Project</a>\n
     · <a href="https://androidicons.com/">Android Icons</a> (<a href="https://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>)\n
     · <a href="http://rrze-icon-set.berlios.de/index.html">RRZE Icon set</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA 3.0</a>)\n
