--- a/main/res/layout/dialog_text_checkbox.xml
+++ b/main/res/layout/dialog_text_checkbox.xml
@@ -29,5 +29,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="-5dp"
-        android:text="@string/dont_shown_again" />
+        android:text="@string/dont_show_again" />
 </LinearLayout>
