--- a/main/res/layout/cacheslist_item.xml
+++ b/main/res/layout/cacheslist_item.xml
@@ -22,9 +22,11 @@
     <!-- "found" marker, vertical green/red line -->
     <ImageView
         android:id="@+id/log_status_mark"
-        android:layout_width="2dip"
+        android:layout_width="4dip"
         android:layout_height="match_parent"
         android:layout_marginRight="4dip"
+        android:layout_marginTop="5dip"
+        android:layout_marginBottom="5dip"
         android:scaleType="centerCrop"
         android:gravity="left|center_vertical"
         android:src="@drawable/mark_transparent"
