Fix #7953 - Fix zoom level difference
Update changelog accordingly

store recreated waypoints to db (fix #9042)

Properly detect failed signin because of invalid credentials in GC connector

See https://github.com/cgeo/cgeo/issues/8818#issuecomment-696409866
The "Your password or username/email is incorrect" string is always there and dynamically added to the div
with id #signup-validation-error via client-side JS, under the condition that this div is present in the page.

Fixes #8818

add captcha check to gc login

--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -9,6 +9,7 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <h4>Map:</h4>
 <ul>
 <li>Show list markers also on waypoints</li>
+<li>Fix zoom difference when switching between Google and OSM maps</li>
 </ul>
 
 <h4>Cache details:</h4>
