--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -28,7 +28,7 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <h4>Cache lists:</h4>
 <ul>
 <li>Change: Allow cache title to wrap to multi-line</li>
-<li>Change: Widened colored found/offline log marker and removed textual "Offline" marker</li>
+<li>Change: Widened colored found/offline log marker and removed textual \"Offline\" marker</li>
 </ul>
 
 <h4>Other:</h4>
