--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -18,6 +18,7 @@
 
 <h4>Other:</h4>
 <ul>
+<li>New: Set/read GSAK "user defined waypoint" flag on GPX export/import (if applicable)</li>
 </ul>
 </div>]]></Data>
   </string>
