--- a/main/res/layout/imageselect_activity.xml
+++ b/main/res/layout/imageselect_activity.xml
@@ -46,7 +46,8 @@
 
         <ImageView
             android:id="@+id/image_preview"
-            android:layout_width="wrap_content"
+            android:scaleType="centerInside"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dip"
             android:layout_marginTop="5dip"
