--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -127,6 +127,7 @@
     <string translatable="false" name="pref_fakekey_preference_backupsettings_full">fakekey_preference_backupsettings_full</string>
     <string translatable="false" name="pref_fakekey_preference_restoresettings">fakekey_preference_restoresettings</string>
     <string translatable="false" name="pref_fakekey_preference_restore">fakekey_preference_restore</string>
+    <string translatable="false" name="pref_backups_backup_history">backups_backup_history</string>
     <string translatable="false" name="pref_backup_caches">backup_caches_enabled</string>
     <string translatable="false" name="pref_backup_settings">backup_settings_enabled</string>
     <string translatable="false" name="pref_backup_logins">backup_logins_enabled</string>
