--- a/main/res/values/changelog_master.xml
+++ b/main/res/values/changelog_master.xml
@@ -13,6 +13,7 @@
 <li>Change: Combine note and user note for export waypoint to GPX, on import split them up</li>
 <li>New: provide direct log link ability for gc.com/oc.*/gc.su</li>
 <li>Change: Disable cache detail share menu for user-defined caches</li>
+<li>New: Support [TYPE] in signature</li>
 </ul>
 
 <h4>Cache lists:</h4>
@@ -25,6 +26,7 @@
 <li>Change: Backup / restore caches and settings in one step</li>
 <li>New: Preserve multiple backups of caches and settings</li>
 <li>New: Set/read GSAK "user defined waypoint" flag on GPX export/import (if applicable)</li>
+<li>Change: Throw a runtime error if db can neither opened nor created</li>
 </ul>
 </div>]]></Data>
   </string>
