--- a/main/res/values/changelog_release.xml
+++ b/main/res/values/changelog_release.xml
@@ -91,7 +91,7 @@ Android 11 enforces a new way for storing data, which c:geo does not support yet
 <li>New: Added one-time messages framework</li>
 <li>Logging: Added more info levels to logfile</li>
 <li>Logging: Added option to write extended logfile with even more info</li>
-<li>Logging: Read log settings from \"logfiles/log.properties\" (if present)</li>
+<li>Logging: Read log settings from \"logfiles/log-properties.txt\" (if present)</li>
 <li>Internal: Updated contributor\'s list</li>
 <li>Internal: Added extension table to database</li>
 <li>Internal: Fixed some issues with database structure</li>
