--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -86,7 +86,6 @@
     <string translatable="false" name="pref_choose_list">choose_list</string>
     <string translatable="false" name="pref_mapsource">mapsource</string>
     <string translatable="false" name="pref_maplanguage">maplanguage</string>
-    <string translatable="false" name="pref_mapDirectory">mapDirectory</string>
     <string translatable="false" name="pref_mapsforge_scale_text">mapsforgeScaleText</string>
     <string translatable="false" name="pref_mapRotation">mapRotation</string>
     <string translatable="false" name="pref_renderthemepath">renderthemepath</string>
@@ -263,6 +262,16 @@
     <string translatable="false" name="pref_map_routing">map_routing</string>
     <string translatable="false" name="pref_theme_menu">theme_menu</string>
 
+    <!-- ids for public folder prefs -->
+    <string translatable="false" name="pref_publicfolder_basedir">publicfolder_basedir</string>
+    <string translatable="false" name="pref_publicfolder_logfiles">publicfolder_logfiles</string>
+    <string translatable="false" name="pref_publicfolder_offlinemaps">publicfolder_offlinemaps</string>
+    <string translatable="false" name="pref_publicfolder_offlinemapthemes">publicfolder_offlinemapthemes</string>
+
+    <string translatable="false" name="pref_publicfolder_testdir">publicfolder_testdir</string>
+
+
+    <!-- preference values -->
     <string translatable="false" name="pref_maprotation_off">off</string>
     <string translatable="false" name="pref_maprotation_manual">manual</string>
     <string translatable="false" name="pref_maprotation_auto">auto</string>
