--- a/main/res/values/changelog_release.xml
+++ b/main/res/values/changelog_release.xml
@@ -2,6 +2,21 @@
 <resources>
   <!-- changelog for the release branch -->
   <string name="changelog_release" translatable="false"><Data><![CDATA[<div>
+<h1>Next bugfix release:</h1>
+
+<h4>Android 11 notice:</h4>
+Android 11 enforces a new way for storing data, which c:geo does not support yet. If you switch your system to Android 11, c:geo will not be able to access part of its data. This will most likely disable storing offline maps, importing/exporting data as well as backing up/restoring c:geo\'s database. Other effects may occur. We recommend to not upgrade to Android 11 for the time being.
+
+<h4>Trackable:</h4>
+<ul>
+<li>Fix: Adapte to website change fixing trackable logging</li>
+</ul>
+
+<h4>Logging:</h4>
+<ul>
+<li>Fix: Crash when adding picture from camera</li>
+</ul>
+
 <h1>Version 2020.10.04:</h1>
 
 <h4>Android 11 notice:</h4>
