--- a/main/res/layout/logcache_image_item.xml
+++ b/main/res/layout/logcache_image_item.xml
@@ -33,6 +33,7 @@
 
         <LinearLayout
             android:layout_toRightOf="@id/log_image_thumbnail"
+            android:layout_toLeftOf="@+id/log_image_delete"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:descendantFocusability="blocksDescendants"
@@ -81,6 +82,21 @@
                 tools:text="@tools:sample/lorem/random"
                 android:maxLines="2" />
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/log_image_delete"
+            style="@style/action_bar_action"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:scaleType="centerInside"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="left"
+            android:src="@drawable/ic_menu_delete"
+            tools:src="@drawable/ic_menu_delete"/>
     </RelativeLayout>
 
     <View
