--- a/main/res/layout/logcache_activity.xml
+++ b/main/res/layout/logcache_activity.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?background_color"
     android:orientation="vertical"
     android:padding="4dip"
@@ -144,79 +143,11 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/image_box"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
-            android:layout_marginBottom="10dip"
-            android:orientation="vertical"
-            android:visibility="visible"
-            tools:visibility="visible">
-
-            <RelativeLayout style="@style/separator_horizontal_layout">
-                <View style="@style/separator_horizontal" />
-                <TextView
-                    style="@style/separator_horizontal_headline"
-                    android:text="@string/log_images" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
-
-                <ImageButton
-                    android:id="@+id/log_image_add_multi"
-                    style="@style/button_small"
-                    android:src="@drawable/ic_menu_image_multi"
-                    android:layout_gravity="left"
-                    android:layout_width="40dip"
-                    android:layout_height="40dip"
-                    />
-
-                <ImageButton
-                    android:id="@+id/log_image_add_camera"
-                    style="@style/button_small"
-                    android:src="@drawable/ic_menu_camera"
-                    android:layout_toRightOf="@+id/log_image_add_multi"
-                    android:layout_gravity="left"
-                    android:layout_width="40dip"
-                    android:layout_height="40dip"
-                    />
-
-                </RelativeLayout>
-
-            <!-- Wrapping RecyclerView with a RelativeLayout is necessary for "wrap_content" to
-               work properly. See e.g. https://stackoverflow.com/questions/27475178/how-do-i-make-wrap-content-work-on-a-recyclerview -->
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <!--   app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                                   app:spanCount="1" -->
-
-                <androidx.recyclerview.widget.RecyclerView
-
-                    android:orientation="vertical"
-                    android:nestedScrollingEnabled="false"
-
-                    android:id="@+id/image_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:cacheColorHint="?background_color"
-                    android:clipToPadding="false"
-                    android:divider="?background_color"
-                    android:footerDividersEnabled="false"
-                    android:headerDividersEnabled="false"
-                    android:listSelector="?background_color"
-                    android:padding="4dip"
-                    android:scrollbars="none"
-                    tools:ignore="NestedScrolling"
-                    tools:listitem="@layout/logcache_image_item">
-
-                </androidx.recyclerview.widget.RecyclerView>
-            </RelativeLayout>
-        </LinearLayout>
+        <fragment
+            android:id="@+id/imagelist_fragment"
+            class="cgeo.geocaching.ui.ImageListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <LinearLayout
             android:id="@+id/inventory_box"
