--- a/main/res/values/strings_not_translatable.xml
+++ b/main/res/values/strings_not_translatable.xml
@@ -40,19 +40,25 @@
     <!-- one line per contributor, format is: <name>|<link>|<contribution identifiers>| -->
     <!-- (contribution identifiers are: c=code, d=documentation, g=graphics, p=project leader, s=support, t=testing) -->
     <string translatable="false" name="contributors_recent">
+    baiti|https://github.com/baiti|c|
     Bananeweizen||c|
     bekuno||c|
+    bmuzzin|https://github.com/bmuzzin|c|
     capoaira|https://github.com/capoaira|c|
     eddiemuc|https://github.com/eddiemuc|c|
     fm-sys|https://github.com/fm-sys|cg|
+    geocachermgo|https://github.com/geocachermgo|t|
     jakedot||c|
     jgoestl||c|
     jonas-koeritz||c|
     Lineflyer|https://www.geocaching.com/email/?guid=d11a3e3d-7db0-4d43-87f2-7893238844a6|tsd|
+    Lomanic|https://github.com/Lomanic|c|
     MagpieFourtyTwo|https://github.com/MagpieFourtyTwo|t|
     moving-bits|https://github.com/moving-bits|cg|
     mucek4||cp|
+    murggel|https://github.com/murggel|c|
     okainov||c|
+    osma|https://github.com/osma|c|
     Peter Storch||c|
     Rainer S.||c|
     SammysHP|https://www.sammyshp.de/||
